design-principles-02/src/main/java/com/farhad/example/design_principles02/ocp/demo2/bad/PaymentService.java
package com.farhad.example.design_principles02.ocp.demo2.bad;


public interface PaymentService {

	void pay(Payment payment);
}
